--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "react-native-jsonschema-form",
+  "name": "@iryo/react-native-jsonschema-form",
   "description": "A simple React component capable of building react native layout forms out of a JSON schema.",
   "main": "index.js",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "author": "Roy aizenebrg <davario@gmail.com>",
   "contributors": [
     "omri Doron <zbish007@gmail.com>"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/royaizenberg/react-native-jsonschema-form" ,
-
+  "homepage": "https://github.com/royaizenberg/react-native-jsonschema-form",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
@@ -17,10 +16,8 @@
   "dependencies": {
     "ajv": "^6.6.2",
     "lodash": "^4.17.11",
-
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
-
     "react-native-calendars": "^1.21.0",
     "react-native-check-box": "^2.1.7",
     "react-native-modal": "^7.0.2",
