--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "@iryo/react-native-jsonschema-form",
   "description": "A simple React component capable of building react native layout forms out of a JSON schema.",
   "main": "index.js",
-  "version": "0.0.11",
+  "version": "0.1.0",
   "author": "Roy aizenebrg <davario@gmail.com>",
   "contributors": [
     "omri Doron <zbish007@gmail.com>"
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "ajv": "^6.6.2",
+    "ajv-errors": "^1.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
